--- a/app/src/main/res/layout/activity_main_second.xml
+++ b/app/src/main/res/layout/activity_main_second.xml
@@ -11,9 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="540dp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="44dp" />
+        tools:layout_editor_absoluteX="30dp" />
+
     <TextView
         android:id="@+id/text2"
         android:layout_width="match_parent"
@@ -41,5 +42,29 @@
         android:layout_marginHorizontal="30dp"
         tools:layout_editor_absoluteX="44dp"
         tools:layout_editor_absoluteY="185dp" />
+
+    <ImageView
+        android:id="@+id/cameraImageView"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:scaleType="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/backgrounds/scenic"
+        tools:ignore="ContentDescription" />
+
+    <Button
+        android:id="@+id/btnCamera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="161dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="162dp"
+        android:background="@android:drawable/ic_menu_camera"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cameraImageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
