--- a/app/src/main/res/layout/activity_camera_open.xml
+++ b/app/src/main/res/layout/activity_camera_open.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivitySecond">
+    tools:context=".CameraOpenActivity">
 
     <TextView
         android:id="@+id/text1"
@@ -24,6 +24,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text1"
         tools:layout_editor_absoluteX="44dp"
         tools:layout_editor_absoluteY="185dp" />
+
     <TextView
         android:id="@+id/text3"
         android:layout_width="match_parent"
@@ -33,13 +34,14 @@
         app:layout_constraintTop_toBottomOf="@+id/text2"
         tools:layout_editor_absoluteX="44dp"
         tools:layout_editor_absoluteY="185dp" />
+
     <TextView
         android:id="@+id/text4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
         android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@+id/text3"
-        android:layout_marginHorizontal="30dp"
         tools:layout_editor_absoluteX="44dp"
         tools:layout_editor_absoluteY="185dp" />
 
@@ -51,8 +53,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <Button
         android:id="@+id/btnCamera"
