--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="rippleEffect">#FF001D</color>
+    <color name="btn_calc_stroke">#ffffff</color>
+    <color name="background">#383836</color>
+    <color name="backgroundOfAction">#FF7F2C</color>
+    <color name="view">#FFF</color>
 </resources>
